--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div>
                     <input type="button" value="00" onclick="display.value += '00' ">
                     <input type="button" value="0"  onclick="display.value += '0' ">
-                    <input  class="operator" type="button" value="=" style="width: 145px;" onclick="display.value = eval(display.value)">
+                    <input  class="operator equal" type="button" value="=" style="width: 145px;" onclick="display.value = eval(display.value)">
                 </div>
             </form>
         </div>
